--- a/src/app/album-details/album-details.component.html
+++ b/src/app/album-details/album-details.component.html
@@ -25,7 +25,7 @@
       </app-pretty>
     </tr>
   </table>
-  <app-images [(visible)]="album" [album]="album">
+  <app-images>
 
   </app-images>
 </div>
