--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,9 @@
     <div>Total official vinyl album count : {{ counter('albums') }}</div>
     <div>Total official 7" single count : {{ counter('singles7') }}</div>
     <div>Total official 12" single count : {{ counter('singles12') }}</div>
+    <p>checking if this test is on master or not</p>
   </div>
-  
+
   <div>
     <router-outlet></router-outlet>
 </div>
