fix resolution for some albums

--- a/src/app/albums/albums.component.html
+++ b/src/app/albums/albums.component.html
@@ -6,6 +6,7 @@
       </a>
 
       <!--GET the name of the album-->
+      <!-- data er basically collection.albums, lúppar svo öll album, núllta stak fyrir hvert album og tekur name þaðan -->
       <div>
         <h2 class="album-center">{{ data[albums][0].name }}</h2>
       </div>
