counter for each entry

--- a/src/app/album-details/album-details.component.html
+++ b/src/app/album-details/album-details.component.html
@@ -1,4 +1,3 @@
-
 <div class="album-item">
   <table>
     <tr class="tw">
@@ -26,6 +25,8 @@
       </app-pretty>
     </tr>
   </table>
+
+  <p>Currently <span>{{data.length}}</span> official items of <span>{{data[0].name}}</span><p>
   <app-images>
 
   </app-images>
