initial bootstrap commit
adding to package.json and angular.json the bootstrap modules

--- a/src/app/album-details/album-details.component.html
+++ b/src/app/album-details/album-details.component.html
@@ -1,46 +1,75 @@
 <div class="album-item">
-  <table>
-    <tr class="tw">
-      <th class="t-width" (click)="changeSort('name')">Name</th>
-      <th class="t-width" (click)="changeSort('country')">Country</th>
-      <th class="t-width" (click)="changeSort('year')">Year</th>
-      <th class="t-width" (click)="changeSort('label')">Label</th>
-      <th class="t-info" (click)="changeSort('info')">Info</th>
-    </tr>
-    <tr class="tw" *ngFor="let albums of data" (click)="open(albums.id, albums.name)">
-      <td class="name-bold">
-        {{ albums.name }}
-      </td>
-      <td>
-        {{ albums.country }}
-      </td>
-      <td>
-        {{ albums.year }}
-      </td>
-      <td>
-        {{ albums.label }}
-      </td>
-      <app-pretty [data]='albums.info'>
-        {{ albums.info }}
-      </app-pretty>
-    </tr>
+
+    <table class="table table-hover table-striped table-dark">
+        <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Album</th>
+          <th scope="col">Country</th>
+          <th scope="col">Year</th>
+          <th scope="col">Info</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="tw" *ngFor="let albums of data" (click)="open(albums.id, albums.name)">
+          <th scope="row">{{ albums.id }}</th>
+          <td>
+            <!-- <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px"> -->
+            {{ albums.name }}
+          </td>
+          <td>{{ albums.country }}</td>
+          <td>{{ albums.year }}</td>
+          <app-pretty [data]='albums.info'>
+              {{ albums.info }}
+          </app-pretty>
+        </tr>
+        </tbody>
+      </table>
+        
+  
+    <!-- <table>
+      <tr class="tw">
+        <th class="t-width">Name</th>
+        <th class="t-width">Country</th>
+        <th class="t-width">Year</th>
+        <th class="t-width">Label</th>
+        <th class="t-info">Info</th>
+      </tr>
+      <tr class="tw" *ngFor="let albums of data" (click)="open(albums.id, albums.name)">
+        <td class="name-bold">
+          {{ albums.name }}
+        </td>
+        <td>
+          {{ albums.country }}
+        </td>
+        <td>
+          {{ albums.year }}
+        </td>
+        <td>
+          {{ albums.label }}
+        </td>
+        <app-pretty [data]='albums.info'>
+          {{ albums.info }}
+        </app-pretty>
+      </tr>
+    </table> -->
+    <app-images>
+  
+    </app-images>
+  </div>
+  
+  <!-- <div class="album-item">
+    <table>
+    <ul>
+      <li *ngFor="let albums of data">
+  
+          {{albums.country}}
+          {{albums.year }}
+          {{albums.label}}
+          {{albums.info}}
+      </li>
+    </ul>
   </table>
-  <app-images>
-
-  </app-images>
-</div>
-
-<!-- <div class="album-item">
-  <table>
-  <ul>
-    <li *ngFor="let albums of data">
-
-        {{albums.country}}
-        {{albums.year }}
-        {{albums.label}}
-        {{albums.info}}
-    </li>
-  </ul>
-</table>
-</div>
--->
+  </div>
+  -->
+  
