--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <h1 class="head"><a href="" [routerLink]="['/']">Metallica vinyl </a></h1>
 </div>
 
-<div class="container">
-  <div class="navbar">
+<div class="main-container">
+  <div class="custom-navbar">
     <nav>
       <ul>
         <li class="nav-element"><a href="" [routerLink]="['/Albums']">Albums </a></li>
