data info on each item

--- a/src/app/album-details/album-details.component.html
+++ b/src/app/album-details/album-details.component.html
@@ -1,3 +1,9 @@
+<div>
+  <img class="dataInfo"src = {{dataInfo.url}}>
+</div>
+<div>
+    {{dataInfo.text}}
+</div>
 <div class="album-item">
   <table>
     <tr class="tw">
